style.css
/* RESET */
* {
  margin: 0;
  padding: 0;
  text-decoration: none;
  box-sizing: border-box;
  font-family: "Kumbh Sans", sans-serif;
}

:root {
  --soft-violet: hsl(273, 75%, 66%);
  --soft-blue: hsl(240, 73%, 65%);
}

#background {
  background-image: linear-gradient(var(--soft-violet), purple);
  width: 100vw;
  height: 100vh;
  padding-top: 4%;
}

.container {
  display: flex;
  border-radius: 30px;
  width: 80vw;
  align-items: center;
  margin: 0 auto;
  background-color: white;
}

summary {
  padding: 0.98rem;
  cursor: pointer;
}

details[open] summary {
  font-weight: bold;
  background-color: rgb(236, 236, 236);
  outline: 1px solid blue;
  border-radius: 10px;
}

p {
  padding: 0.45rem;
}

#FAQ {
  position: relative;
  bottom: 15rem;
  right: 4rem;
}

.list:active {
  color: red;
  transition: 0.5s;
}

#questions {
  width: 40%;
  height: 0%;
  align-items: left;
  text-align: left;
  font-size: small;
}

#ilustration {
  width: 50.5%;
  position: relative;
  bottom: 5rem;
  right: 1.5rem;
  z-index: 1;
}

#vector-mobile {
  display: none;
}

#box {
  position: relative;
  top: 20rem;
  right: 1.5rem;
}

@media (max-width: 499px) {
  #background {
    width: 100vw;
    height: 100vh;
    padding-top: 2rem;
    padding-bottom: 9.5vh;
  }

  .container {
    display: flex;
    flex-direction: column;
    height: 90vh;
  }

  #vector-mobile {
    display: block;
    width: 15rem;
    height: -50vh;
    position: relative;
    top: 2.5rem;
    right: 1rem;
  }

  #questions {
    width: 86%;
  }

  #FAQ {
    top: 0.1rem;
    left: 0.1rem;
  }

  #vector {
    display: none;
  }

  #box {
    display: none;
  }
}

